added module to package.json

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <script type="module" src="/mwc.js"></script>
-    <script type="module" src="/mwc-pwa-auth/define.js"></script>
+    <script type="module" src="/index.js"></script>
   </head>
   <body>
     <mwc-top-app-bar centerTitle>
@@ -37,11 +36,11 @@
       </mwc-pwa-auth>
       <div style="position: relative;">
         <mwc-menu>
-          <mwc-list-item>
-            <a href="https://github.com/cnrdh/mwc-pwa-auth">
+          <a href="https://github.com/cnrdh/mwc-pwa-auth">
+            <mwc-list-item>
               https://github.com/cnrdh/mwc-pwa-auth
-            </a>
-          </mwc-list-item>
+            </mwc-list-item>
+          </a>
         </mwc-menu>
       </div>
     </mwc-top-app-bar>
