--- a/index.html
+++ b/index.html
@@ -11,28 +11,37 @@
     <style>
       :root {
         --primary: 0, 0, 0;
+        --mdc-theme-primary: rgba(var(--primary));
       }
 
       * {
         margin: 0;
         padding: 0;
-        --mdc-theme-primary: rgba(var(--primary));
+      }
+      :not(:defined) {
+        display: none;
       }
     </style>
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500|Material+Icons"
       rel="stylesheet"
     />
     <script type="module" src="/index.js"></script>
   </head>
-  <body>
+  <body class="mdc-typography">
     <mwc-top-app-bar centerTitle>
       <mwc-icon-button icon="menu" slot="navigationIcon"></mwc-icon-button>
       <div slot="title">mwc-pwa-auth</div>
       <mwc-pwa-auth
+        assets="/@pwabuilder/pwaauth/assets"
         slot="actionItems"
         googlekey="451515477160-1mvef0b3ipcn9u0hjao31h4ug7ridum0.apps.googleusercontent.com"
+        microsoftkey="52d5f0df-702d-416d-9744-d2b5ff432dab"
       >
+        <span slot="welcome">
+          <h3 class="mdc-typography--headline1">mwc-pwa-auth</h3>
+          <label>select identity provider</label>
+        </span>
       </mwc-pwa-auth>
       <div style="position: relative;">
         <mwc-menu>
