--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <title></title>
     <style>
       :root {
-        --primary: 0, 0, 0;
-        --mdc-theme-primary: rgba(var(--primary));
+        --mdc-theme-primary: black;
       }
 
       * {
@@ -22,15 +21,14 @@
         display: none;
       }
     </style>
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500|Material+Icons"
       rel="stylesheet"
-    />
+    /> -->
     <script type="module" src="/index.js"></script>
   </head>
   <body class="mdc-typography">
-    <mwc-top-app-bar centerTitle>
-      <mwc-icon-button icon="menu" slot="navigationIcon"></mwc-icon-button>
+    <mwc-top-app-bar>
       <div slot="title">mwc-pwa-auth</div>
       <mwc-pwa-auth
         assets="/@pwabuilder/pwaauth/assets"
